# siliconcompiler

./: .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Changes  LICENSE  MANIFEST.in  README.md  SECURITY.md  TEST_COVERAGE_SUMMARY.md  Vagrantfile  codecov.yml  harness.mk  poc.py  pyproject.toml  requirements.txt  setup.py  tclint.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: cache_maintenance.yml  conda_ci.yml  daily_ci.yml  daily_tests.yml  docker_image.yml  docs_test.yml  gcd_test.yml  jira_integration.yml  lint.yml  main.yml  on_push_tests.yml  python_ci.yml  server_ci.yml  tool_updater.yml  tools_build.yml  tools_builder_image.yml  tools_ci.yml  wheels.yml
asap7/ibex/: metadata-base-ok.json
asap7/jpeg/: config.mk
asic/targets/: asap7.py  eda_default.py  freepdk45.py  freepdk45_libs.py  skywater130.py  template.py
docs/: .gitignore  README.md  api.rst  cli_interface.rst  commandline.rst  conf.py  glossary.rst  index.rst  index_pdf.rst  install.rst  intro.rst  python_interface.rst  run.rst  run.sh  sc_help.txt  sc_refcard.md  schema.rst
docs/_ext/: clientservergen.py  common.py  dynamicgen.py  flowgen.py  installgen.py  metricgen.py  packagegen.py  recordgen.py  requirements.py  schemagen.py  targetgen.py  toolgen.py
docs/_images/: sc_flow.dot
docs/_templates/: version.html
docs/development_guide/: contribution.rst  external_libraries.rst  flows.rst  index.rst  libraries.rst  metrics.rst  options.rst  pdks.rst  records.rst  remote_processing.rst  targets.rst  tools.rst
docs/examples/: add.v  add_syn.py  nsquared.py  pattern_forkjoin.py  pattern_general.py  pattern_pipeline.py
docs/faq/: index.rst
docs/reference_manual/: api.rst  apps.rst  checklists.rst  commandline.rst  core_api.rst  dashboard_how_to_guide.rst  environment.rst  examples.rst  executable.rst  floorplan_api.rst  flows.rst  foundries.rst  index.rst  logger.rst  schema.rst  schema_api.rst  server_api.rst  server_interface.rst  sup_api.rst  targets.rst  tools.rst  uniquify_api.rst
docs/resources/: primer.rst
docs/server_schema/: check_progress.json  delete_job.json  get_results.json  import.json  remote_run.json
docs/targets/: index.rst
docs/tools/: index.rst
docs/tutorials/: asicflow.rst  bambu.rst  bluespec.rst  chisel.rst  contribution.rst  flowsetup.rst  foundrysetup.rst  frontends.rst  hierarchical_flow.rst  hw_frontends.rst  index.rst  migen.rst  parallel.rst  picorv32_ram.rst  remote_soc.rst  remoteflow.rst  slurmsetup.rst  toolsetup.rst  workflow.rst  zerosoc.rst
docs/user_guide/: checklist.rst  clientserver.rst  data_model.rst  data_model_old.rst  docker.rst  execution_model.rst  faq.rst  flow.rst  flows.rst  glossary.rst  index.rst  installation.rst  installation_prep_path.rst  introduction.rst  libraries.rst  library.rst  licenses.rst  metric.rst  metrics.rst  package_management.rst  packages.rst  patching.rst  pdk.rst  pdks.rst  programming_model.rst  quick_start.rst  quickstart.rst  records.rst  remote_processing.rst  remoteflow.rst  running_sc.rst  target.rst  targets.rst  tool.rst  tools.rst  what_is_sc.rst
eda/asic/: sc_cts.tcl  sc_lvs.tcl  sc_signoff.tcl
eda/ecppack/: ecppack_setup.py
eda/flows/: asic-checked.py  fpga-uhdm.py  fpga.py  vpr.py
eda/fusesoc/: fusesoc_setup.py
eda/ghdl/: ghdl_setup.py
eda/ghdlyos/: ghdlyos_setup.py
eda/icepack/: icepack.py  icepack_setup.py
eda/klayout/: def2gds.py  def2stream.py  gds2svg.py  klayout.py  klayout_setup.py  sc_export.py
eda/magic/: count_lvs.py  gds_drc.tcl  lvs.tcl  magic_setup.py
eda/morty/: morty_setup.py
eda/nextpnr/: cp.py  nextpnr-ice40.py  nextpnr.py  nextpnr_setup.py
eda/openfpga/: openfpga.py  openfpga_script_template.openfpga  openfpga_setup.py  pro_blif.pl
eda/openroad/: openroad.py  openroad_setup.py  sc_adapter.tcl  sc_apr.tcl  sc_cts.tcl  sc_dfm.tcl  (+8 more)
examples/: README.md  adder_sweep.py  checkarea.py  hierarchy.py  parallel.py  requirements.txt
scripts/: .gitignore  check_dashboard.py  check_library.py  class_hierarchy.py  dot.py  methods.py  profile_sc.py  report_library.py  requirements.txt
setup/: _tools.json  _tools.py  build_tools.sh  install-bambu.sh  install-bluespec.sh  install-bsc.sh  install-chisel.sh  install-ghdl.sh  install-icarus.sh  install-ice40.sh  install-icepack.sh  install-klayout.sh  install-magic.sh  install-morty.sh  install-netgen.sh  install-nextpnr.sh  install-openfpga.sh  install-openroad-rhel7.sh  install-openroad.sh  install-py.sh  install-python.sh  install-rust.sh  install-sbt.sh  install-surelog.sh  install-sv2v-pkg.sh  install-sv2v.sh  install-verilator-pkg.sh  install-verilator.sh  install-vpr.sh  install-xyce.sh  install-yosys.sh  rhel7-install-openroad.sh  sc-dev-rhel.sh
siliconcompiler/: AUTHORS  __init__.py  __main__.py  _common.py  _dummy.py  _metadata.py  asic.py  cells.py  checklist.py  cli.py  client.py  cmdlineschema.py  config.py  constraint.py  core.py  crypto.py  def.py  deflib.py  dependency.py  dependencyschema.py  design.py  filesetschema.py  floorplan.py  flowgraph.py  fpga.py  issue.py  lef.py  lefdef.py  leflib.py  leflib_old.py  librarian.py  library.py  metric.py  option.py  package.py  packageschema.py  pathschema.py  pdk.py  poc.py  project.py  (+17 more)
test/: test.py
tests/: README.md  conftest.py  fixtures.py  insecure_ci_keypair  test_asic.py  test_check_manifest_patch.py  test_checklists.py  test_checklistschema.py  test_cmdlineschema.py  test_constraint.py  test_dependencyschema.py  test_design.py  test_design_patch.py  test_docs_schema_api.py  test_filesetschema.py  test_flowgraph.py  test_fpga.py  test_library.py  test_logging_levels.py  test_metric.py  test_packageschema.py  test_packageschema_impl.py  test_patch.py  test_pathschema.py  test_pdk.py  test_project.py  test_project_patch.py  test_record.py  test_schema_information.py  test_schema_version.py  test_schematic.py  test_tool.py  test_tools.py  utils.py
(+2141 files in other folders)
