[build-system]
requires = [
    "setuptools >= 45",
    "scikit-build >= 0.14.1"
]

[tool.pytest.ini_options]
markers = [
    "eda: this test requires EDA tools installed to run. By default these tests will be run nightly, not on push.",
    "quick: always run this test on push, even if it requires EDA tools.",
    "remote_test: marker used to pass 'port' variables into remote flow fixtures.",
    "nostrict: don't automatically set [option, strict] parameter for Chip objects in this test.",
    "nolocal: don't use the local data for siliconcompiler_data.",
    "docker: test requires docker",
]
testpaths = "tests"
timeout = "180"

[tool.tclint]
exclude = [
    '/setup/',
    'build/',
    # messy file adapted from another source
    '/siliconcompiler/tools/yosys/syn_strategies.tcl'
]

[tool.tclint.style]
allow-aligned-sets = true
line-length = 100
indent = 4
max-blank-lines = 1
spaces-in-braces = true

[[tool.tclint.fileset]]
# This fileset overrides the global indent for OpenROAD scripts.
paths = ["siliconcompiler/tools/openroad/scripts"]

[tool.tclint.fileset.style]
indent = 2

[tool.codespell]
skip = '*.json,*.xml,./siliconcompiler/templates/report/bootstrap.min.js,./tests/utils/test_utils.py'
count = true
quiet-level = 3
ignore-words-list = 'synopsys,inout,subtile,FRAM,dffer,dffers'
